testing srcset to fix menu.html shrinking overlaps

--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -50,7 +50,7 @@ main {
 }
 
 img {
-  width: 80%;
+  width: 75%;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.739);
   margin: 10px;
@@ -64,7 +64,6 @@ img {
 .flex-container table {
   border: 2px solid #341f03d6;
   border-style: dotted;
-  flex: auto;
   margin-top: 10px;
   margin-bottom: 10px;;
 }
